# Qbot-chen

./: .cnb.yml  .gitignore  CMakeLists.txt  PROJECT_SUMMARY.md  README.md  agent.cpp  agent.h  build.sh  builtin_plugins.cpp  builtin_plugins.h  cleanup_manager.cpp  cleanup_manager.h  command.cpp  command.h  command_handler_plugin.cpp  command_handler_plugin.h  config.cpp  config.example.json  config.h  connection_pool.cpp  database_migrator.cpp  deepseek.cpp  deepseek.h  embedding_plugin.cpp  embedding_plugin.h  embedding_service.cpp  embedding_store.cpp  event_bus.cpp  image_ocr_service.cpp  jargon_data_model.cpp  jargon_data_model.h  jargon_inference.cpp  jargon_inference.h  jargon_miner.cpp  jargon_miner.h  jargon_miner_old.cpp  knowledge_base_plugin.cpp  knowledge_base_plugin.h  knowledge_retriever.cpp  knowledge_retriever.h  (+47 more)
.cnb/: build.sh
.github/workflows/: build-ubuntu.yml  build-windows.yml  ci.yml  clang-tidy.yml  windows.yml
src/bot/: agent.cpp  agent.h  connection_pool.cpp  connection_pool.h  deepseek.cpp  deepseek.h  image_ocr_service.cpp  image_ocr_service.h  models.cpp  models.h  napcat_bot.cpp  napcat_bot.h
src/core/: base.h  command.cpp  command.h  config.cpp  config.h  math.h  tools.cpp  tools.h
src/infra/: cleanup_manager.cpp  database_migrator.cpp  database_migrator.h  event_bus.cpp  event_bus.h  logger.cpp  message_deduplicator.cpp  perf_monitor.cpp  perf_monitor.h  reply_optimizer.cpp  reply_optimizer.h
src/knowledge/: embedding_service.cpp  embedding_service.h  embedding_store.cpp  embedding_store.h  knowledge_retriever.cpp  knowledge_sharing.cpp  knowledge_sharing.h  quality_scorer.cpp  query_cache.cpp  query_cache.h
src/mcp/: mcp_client.cpp  mcp_client.h  mcp_manager.cpp  mcp_manager.h
src/memory/: jargon_data_model.cpp  jargon_data_model.h  jargon_inference.cpp  jargon_inference.h  jargon_miner.cpp  jargon_miner.h  jargon_miner_old.cpp  long_memory.cpp  long_memory.h  long_memory_phase3.cpp  memory.cpp  memory.h  memory_manager.cpp  memory_manager.h  style_cache.cpp  style_cache.h  style_learner.cpp  style_learner.h  vocabulary_manager.cpp  vocabulary_manager.h
src/plugin/: builtin_plugins.cpp  builtin_plugins.h  command_handler_plugin.cpp  command_handler_plugin.h  embedding_plugin.cpp  embedding_plugin.h  knowledge_base_plugin.cpp  knowledge_base_plugin.h  long_term_memory_plugin.cpp  long_term_memory_plugin.h  persistence.cpp  persistence.h  plugin_base.cpp  plugin_base.h  plugin_loader.cpp  plugin_loader.h  process_manager.cpp  process_manager.h  user_management_plugin.cpp  user_management_plugin.h
